<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/friend_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="@dimen/dialog_margin_bottom"
        android:hint="@string/name"
        style="@style/input_form"
        />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/racha_conta_button"
        android:text="@string/add"
        android:textColor="@color/black"
        />

</LinearLayout>