<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/warningTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/warning_main"
        android:textColor="@color/white"
        />
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/recyclerview_margin"
        android:visibility="gone"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deskfloatingactionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        app:fabSize="normal"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/floatingactionbutton_margin"
        app:layout_anchor="@id/friends_recyclerview"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="@color/yellow"
        />

</android.support.design.widget.CoordinatorLayout>